# PyLog2PDF

./: README.md  pyproject.toml
.github/workflows/: test.yml
pylog2pdf/: __init__.py  logger.py  pdf_io.py
tests/: test_logger.py  test_package.py  test_pdf_io.py
