[tool.poetry]
name = "pylog2pdf"
version = "0.1.0"
description = "PDF, a visualisation of your calculation, can have essentials of your code."
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/KaoruNishikawa/PyLog2PDF"
repository = "https://github.com/KaoruNishikawa/PyLog2PDF"

[tool.poetry.dependencies]
python = ">=3.7, <3.12"
PyPDF2 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^22.8"
flake8 = "^5.0"
ipykernel = "^5.3"
m2r2 = "^0.2"
pydata-sphinx-theme = "^0.4"
pytest = "^6.2.4"
sphinx = "^3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
